fix: add download pdf, button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
 				<nav class="nav">
 					<span class="logo"> TH </span>
 					<ul>
-						<li class="active">How</li>
-						<li>About</li>
-						<li>Work</li>
+						<li class="active">
+							<a href="#home">Home</a>
+						</li>
+						<li>
+							<a href="#about">About</a>
+						</li>
+						<li>
+							<a href="#product">Work</a>
+						</li>
 						<li>
 							<svg
 								width="20"
@@ -63,7 +69,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="banner">
+		<section class="banner" id="home">
 			<span class="slogan">
 				The measure of life is not its duration but its donation
 			</span>
@@ -78,12 +84,12 @@
 			<div class="flex-col">
 				<h1>Hello! I’m Tuyet Hoa</h1>
 				<span class="intro__subtitle">Graphic Designer</span>
-				<button>Contact me</button>
+				<button class="btn">Contact me</button>
 			</div>
 		</section>
 		<main>
 			<div class="container">
-				<section class="about">
+				<section class="about" id="about">
 					<div class="title">
 						<h3>About Me</h3>
 						<span class="title-line"></span>
@@ -103,10 +109,10 @@
 						</div>
 					</div>
 					<div class="flex">
-						<span class="down">Download Resume</span>
+						<a class="down" href="nguyen_thi_tuyet_hoa_cv.pdf" title="" download>Download Resume</a>
 					</div>
 				</section>
-				<section class="products">
+				<section class="products" id="product">
 					<div class="title">
 						<h3>Welcome to my Work!</h3>
 						<span class="title-line"></span>
